--- a/.eslintrc
+++ b/.eslintrc
@@ -115,11 +115,11 @@
      */
     "indent": [
       2,
-      4,
+      "tab",
       { "SwitchCase": 1 }
     ],                              // http://eslint.org/docs/rules/indent
     "brace-style": [
-      2,                          
+      2,
       "1tbs", {
         "allowSingleLine": true
       }
